Version 7.2
===========

New Features and Enhancements
-----------------------------
* Added CString class
   The CString class is intended to provide much of the same functionality
   as the CString class provided with MFC/ATL.
* Added CMenu
* Added CFile   


Changes in detail
-----------------
- Added CMenu
- Added CString
- Added CFile
- Added BSTR2A
- Added BSTR2T
- Added BSTR2W
- Added CDocker::GetActiveDocker
- Added CFrame::IsMDIFrame
- Added CWinApp::GetAccelerators
- Added CWinException::GetError
- Added CWnd::ChildWindowFromPoint
- Added CWnd::WindowFromPoint
- Modified LoadString 					now returns CString
- Modified CDC::BitBlt					now takes a CDC pointer
- Modified CDC::CreateCompatibleDC		now takes a CDC pointer and attaches the DC
- Modified CDC::CreateDC				now attaches the DC							
- Modified CDC::CreateIC            	now attaches the DC
- Modified CDC::CreateCompatibleBitmap	now takes a CDC pointer
- Modified CDC::CreateDIBitmap			now takes a CDC pointer
- Modified CDC::CreateDIBSection		now takes a CDC pointer
- Modified CDC::StretchBlt				now takes a CDC pointer
- Modified CDocker::IsChildOfDocker 	now takes a CWnd pointer instead of HWND
- Modified CDocker::IsRelated 			now takes a CWnd pointer instead of HWND
- Modified CWnd::GetAncestor			now accepts a gaFlags parameter
- Removed CLoadString
- Removed GetWindowType for all CWnd classes
- Renamed CDocker::GetDockTopLevel to CDocker::GetTopmostDocker


Incompatibilities with previous versions
----------------------------------------
* The Win32++ now uses Run Time Type Information (RTTI). Older Microsoft
  compilers (Visual Studio 2003 and earlier) will need to have the option to
  support RTTI enabled.
* LoadString now returns a CString.


Version 7.1
===========
New Features and Enhancements
-----------------------------
* Added support for Task Dialogs
* Added the following set of gdi classes: CBitmap, CBrush, CFont, CPalette, 